--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,8 @@ header{
     color: orange;
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
-    max-width: 60%;
+    margin-left: 200px;
+    margin-right: 200px;
 }
 
 .grid {
